sort.pancake.lessons.sort.pancake.BasicPancake.scala.code
def solve() {
  var max = 0 ;
  for (i<-0 until getStackSize()){
    max=0
    for(j<-0 to getStackSize()-i){
      if(getPancakeRadius(j)>getPacakeRadius(max)){
        max = j
      }
    }
    flip(j)
    flip(getStackSize()-i)
  }
}